--- a/wk2_Landsat9.html
+++ b/wk2_Landsat9.html
@@ -25,12 +25,12 @@ class: center, middle, inverse, title-slide
 ### CASA, UCL
 ]
 .date[
-### 2024/3/12 (updated: 2024-03-21)
+### 2024/3/12 (updated: 2024-03-22)
 ]
 
 ---
 
-class: inverse, center, title-slide, middle
+class: center, title-slide, bottom
 
 background-image: url("https://th.bing.com/th/id/OIP.bymqEIDKbTreoK_4_0JyzgHaEK?rs=1&amp;pid=ImgDetMain")
 background-size: cover
@@ -38,7 +38,7 @@ background-position: center
 
 # Landsat 9
 ## A new milestone for Earth observation
-### 21/03/2024
+### 22/03/2024
 
 ---
 
