update file & html

--- a/wk2_Landsat9.html
+++ b/wk2_Landsat9.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view/tile-view.js"></script>
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
     <script src="libs/panelset/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"d18e2c02a24945c1968cc6a5ae2d7a12","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe075111ac5d4e14892d74743e89e3e1","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
     <script src="libs/editable/editable.js"></script>
@@ -62,7 +62,7 @@ background-position: center
 ## A new milestone for Earth observation
 &lt;/br&gt; &lt;/br&gt;
 ### Xiaoyi Chen, CASA, UCL
-### 07/07/2024
+### 08/07/2024
 
 ---
 
@@ -325,7 +325,8 @@ With continuous technological advancements, Earth observation technology is expe
 
 
 
-
+---
+## 7 Reflection
 
 
 ---
