--- a/wk2_Landsat9.html
+++ b/wk2_Landsat9.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view/tile-view.js"></script>
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
     <script src="libs/panelset/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe075111ac5d4e14892d74743e89e3e1","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"b2fc62efe55543f58480463c41f2b2a4","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
     <script src="libs/editable/editable.js"></script>
@@ -174,8 +174,28 @@ source:[USGS Technical Announcement (February 2022)](https://www.usgs.gov/landsa
 source:[Landsat 9 Mission Details](https://landsat.gsfc.nasa.gov/satellites/landsat-9/landsat-9-mission-details/)
 
 
+
+
+
 ---
-## 4 Scientific Applications of Landsat 9
+## 4 Data Distribution and Utilization
+&lt;small&gt;
+
+&lt;img src="https://www.eoportal.org/ftp/satellite-missions/l/Landsat9_180722/Landsat9_Auto1.jpeg" width="150%" style="display: block; margin: auto;" /&gt;
+
+- **Data Acquisition and Processing:**
+Landsat 9 data can be obtained through various channels, including NASA and USGS official websites, data archives, etc. Additionally, various data processing tools and software are available for data analysis and processing.
+
+- **User Support and Services:**
+NASA and USGS provide various support and services for users, including data query, technical support, training, and educational resources, facilitating users in effectively utilizing Landsat 9 data.
+
+- **Data Application Examples:**
+Landsat 9 data has widespread application examples across various fields, including land use monitoring, agricultural production, urban planning, environmental protection, etc.
+
+
+
+---
+## 5 Scientific Applications of Landsat 9
 
 &lt;div style="display: flex; justify-content: space-around; align-items: flex-start; text-align: middle;"&gt;
   &lt;figure style="margin: 0 5px; flex-basis: calc(31.3% - 2px);"&gt;
@@ -297,36 +317,27 @@ source: [USDA/FAS and NASA/GSFC/GIMMS Global Agriculture Monitoring (GLAM) Proje
 
 
 
-
-
-
----
-## 5 Data Distribution and Utilization of Landsat 9
-
-Data Acquisition and Processing:
-Landsat 9 data can be obtained through various channels, including NASA and USGS official websites, data archives, etc. Additionally, various data processing tools and software are available for data analysis and processing.
-
-User Support and Services:
-NASA and USGS provide various support and services for users, including data query, technical support, training, and educational resources, facilitating users in effectively utilizing Landsat 9 data.
-
-Data Application Examples:
-Landsat 9 data has widespread application examples across various fields, including land use monitoring, agricultural production, urban planning, environmental protection, etc.
-
-
 ---
 ## 6 Future Outlook
-
-Role and Impact of Landsat 9:
-Landsat 9 will continue to play a significant role in Earth observation, providing data support and technical assistance for scientific research, resource management, and environmental protection.
-
-Trends in Earth Observation Technology Development:
-With continuous technological advancements, Earth observation technology is expected to evolve, potentially introducing more advanced sensors and technologies, leading to breakthroughs in Earth science research.
+&lt;img src="https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/styles/full_width/public/media/images/L-Next-SpectralBands-.png?itok=mSGGEi4R" height="300%" style="display: block; margin: auto;" /&gt;
+&lt;small&gt;
+Landsat Next, set to launch in late 2030 / early 2031, will enhance Earth observation with a **26-band superspectral** constellation, improving spatial and temporal resolution. The mission will feature three identical observatories, providing a 6-day revisit time and collecting 20 times more data than Landsat 9, with higher spatial resolutions and free data access for all users.
 
 
-
+&lt;br/&gt;Source: [NASA’s Goddard Space Flight Center. (2024)](https://www.usgs.gov/landsat-missions/landsat-next), [Wulder, M.A. et al., 2019](https://www.sciencedirect.com/science/article/pii/S0034425719300707),[Masek, J.G. et al., 2020](https://www.sciencedirect.com/science/article/abs/pii/S0034425720303382)
 
 ---
 ## 7 Reflection
+
+Landsat Next's enhancement of Earth observation with a 26-band superspectral constellation means there are more detectable spectra. Reflecting on the **progress from Landsat 8 to Landsat 9**, it is evident that significant advancements have been made, particularly in terms of a wider detection range. So, what has been added?
+
+
+Reflecting on the evolution from Landsat 8 to Landsat 9, significant advancements are apparent. Landsat 9 has improved spatial resolution and temporal coverage, allowing for more frequent and accurate observations.
+
+One of the key insights I gained is the importance of the Operational Land Imager 2 (OLI-2) and Thermal Infrared Sensor 2 (TIRS-2) in capturing high-resolution data across multiple spectral bands.
+
+Therefore, I think the **Landsat Next** program is crucial for hardware upgrades, especially sensor upgrades and innovations. Achieving a wider range of detection performance is undoubtedly challenging but essential.
+
 
 
 ---
@@ -341,7 +352,13 @@ With continuous technological advancements, Earth observation technology is expe
 
 - Hansen, M.C. and Loveland, T.R., 2012. _A review of large area monitoring of land cover change using Landsat data_. Remote Sensing of Environment, 122, pp.66-74.
 
-- 
+- NASA’s Goddard Space Flight Center. (2024). _Landsat Next: Advancing Earth Observation Capabilities_. Available at: [https://www.usgs.gov/landsat-missions/landsat-next](https://www.usgs.gov/landsat-missions/landsat-next) (Accessed: 8 July 2024).
+
+- Wulder, M.A., Loveland, T.R., Roy, D.P., Crawford, C.J., Masek, J.G., Woodcock, C.E., Allen, R.G., Anderson, M.C., Belward, A.S., Cohen, W.B., Dwyer, J., Erb, A., Gao, F., Griffiths, P., Helder, D., Hermosilla, T., Hipple, J.D., Hostert, P., Hughes, M.J., Huntington, J., … Zhu, Z., 2019. _Current status of Landsat program, science, and applications1Remote Sensing of Environment_, 225, pp.127-1472. DOI: [10.1016/j.rse.2019.02.0153](10.1016/j.rse.2019.02.0153).
+
+- Masek, J.G., Wulder, M.A., Markham, B., McCorkel, J., Crawford, C.J., Storey, J. and Jenstrom, D.T., 2020. _Landsat 9: Empowering open science and applications through continuity1Remote Sensing of Environment_, 248, p.1119682.
+&lt;small&gt;
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
